# teletest

./: README.md  channels_config.json  pyproject.toml
migrations/: env.py
migrations/versions/: 087802aeab7c_initial.py  b3f1c9a20d41_add_hnsw_index_on_messages_embedding.py
scripts/: migrate.py
src/: config.py  main.py
src/bot/: handlers.py  main.py
src/collector/: client.py
src/core/: channels_config.py  queues.py
src/core/llm/: base.py  budget_manager.py  factory.py  gemini.py  prompts.py
src/core/rag/: __init__.py  chunker.py  retriever.py
src/database/: session.py
src/database/models/: __init__.py  channels.py  entities.py  events.py  messages.py  summaries.py
src/database/repositories/: base.py  channels.py  entities.py  events.py  messages.py
src/pipeline/: filters.py  matcher.py  nlp.py  orchestrator.py
src/reasoning/: intelligence.py
src/reasoning/summarization/: hierarchical.py
tests/: conftest.py  test_channels_config.py  test_chunker.py  test_filters.py
